2011-01-04  Janus Weil  <janus@gcc.gnu.org>

PR fortran/46448
	* class.c (gfc_find_derived_vtab): Set the module field for the copying
	routine to make sure it receives module name mangling.


2011-01-04  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/46448
	* gfortran.dg/class_34.f90: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168464 138bc75d-0d04-0410-961f-82ee72b054a4